--- a/src/rant.css
+++ b/src/rant.css
@@ -1,15 +1,15 @@
 
 @font-face {
 	font-family: Manrope;
-	src: url('./Manrope-Regular.ttf');
+	src: url('Manrope-Regular.ttf');
 }
 
 body {
-	font-family: Manrope; 
+	font-family: Manrope;
     margin: 0;   /* Remove body margins */
 }
 
-video { 
+video {
     max-width:100%;
   	max-height:100%;
 }
@@ -35,13 +35,13 @@ video {
 .previewdiv {
   position: fixed;
   display:none;
-  text-align:center; 
-  left: 0; 
+  text-align:center;
+  left: 0;
   right: 0;
   top:50;
-  bottom:0; 
+  bottom:0;
   margin-left: auto;
-  margin-right: auto; 
+  margin-right: auto;
   width: 100%;
   z-index: 10;
 }
@@ -62,7 +62,7 @@ video {
   border: 2px solid #ccc;
   border-radius: 4px;
   background-color: #f8f8f8;
-  font-family: Manrope; 
+  font-family: Manrope;
   font-size: 14px;
   resize: vertical;
 }
