--- a/src/app.css
+++ b/src/app.css
@@ -159,6 +159,20 @@ html {
     margin: 0 auto;
 }
 
+.button--tall {
+    padding: 12px 25px;
+    display: flex;
+    align-items: center;
+    gap: 12px;
+}
+
+.button--taller {
+    padding: 16px 25px;
+    display: flex;
+    align-items: center;
+    gap: 12px;
+}
+
 .button:disabled {
     opacity: 0.5;
 }
@@ -1191,6 +1205,22 @@ html {
     width: 100%;
 }
 
+.mr-1 {
+    margin-right: 4px;
+}
+
+.mb-2 {
+    margin-bottom:8px;
+}
+
+.mb-3 {
+    margin-bottom: 12px;
+}
+
+.mt-4 {
+    margin-top: 16px;
+}
+
 .mb-4 {
     margin-bottom: 16px;
 }
@@ -1201,6 +1231,14 @@ html {
 
 .mb-5 {
     margin-bottom: 20px;
+}
+
+.mb-6 {
+    margin-bottom: 24px;
+}
+
+.mb-7 {
+    margin-bottom: 28px;
 }
 
 .intro {
@@ -1245,4 +1283,89 @@ html {
 
 .feed-item__actions-right svg {
     margin-right: 10px;
+}
+
+.tip-modal {
+    position: fixed;
+    background: rgba(0,0,0,0.3);
+    width: 100vw;
+    height: 100vh;
+    left: 0;
+    top: 0;
+    display: none;
+    align-items: center;
+    justify-content: center;
+    z-index: 1000;
+}
+
+.tip-modal__shell {
+    background: black;
+    margin-bottom: 40px;
+    position: relative;
+    z-index: 1001;
+    color: white;
+    padding: 25px 25px 15px 25px;
+    width: 100%;
+    max-width: 420px;
+    border: 1px solid #2f2f2f;
+}
+
+.frosted {
+    background: rgba(0,0,0,0.8);
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.w-full {
+    width: 100%;
+}
+
+.tip__title {
+    margin-top: 0;
+    font-size: 22px;
+}
+
+.tip__form {
+    margin-bottom: 0;
+}
+
+.tip__input {
+    width: 100%;
+    height: 52px;
+    outline: none;
+    border: 2px solid #3b3b3b;
+    background: black;
+    padding: 0 12px;
+    color: white;
+    font-weight: bold;
+    font-size: 16px;
+}
+
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+input[type=number] {
+    -moz-appearance:textfield; /* Firefox */
+}
+
+.tip__minima_icon, .tip__tip_icon {
+    position: absolute;
+    height: 18px;
+    width: 20px;
+    right: 16px;
+    top: 16px;
+}
+
+.tip__tip_icon {
+    cursor: pointer;
+}
+
+.position-relative {
+    position: relative;
 }
